--- a/DimigoGameLast/DimigoGameLast.vcxproj
+++ b/DimigoGameLast/DimigoGameLast.vcxproj
@@ -163,6 +163,8 @@
     <Image Include="Resource\sky_background.bmp" />
     <Image Include="Resource\spit.bmp" />
     <Image Include="Resource\start.bmp" />
+    <Image Include="Resource\story_coco_win.bmp" />
+    <Image Include="Resource\story_dingding_win.bmp" />
     <Image Include="Resource\story_first.bmp" />
     <Image Include="Resource\story_timetable.bmp" />
     <Image Include="Resource\string.bmp" />
