--- a/DimigoGameLast/DimigoGameLast.vcxproj.filters
+++ b/DimigoGameLast/DimigoGameLast.vcxproj.filters
@@ -158,9 +158,6 @@
     <ClInclude Include="GameHelpScene.h">
       <Filter>Header Files\GameScenes</Filter>
     </ClInclude>
-    <ClInclude Include="HomeScene.h">
-      <Filter>Header Files\GameScenes</Filter>
-    </ClInclude>
     <ClInclude Include="ReadyStartScene.h">
       <Filter>Header Files\GameScenes</Filter>
     </ClInclude>
@@ -202,6 +199,9 @@
     </ClInclude>
     <ClInclude Include="Delay.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="HomeScene.h">
+      <Filter>Header Files\GameScenes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -499,6 +499,12 @@
       <Filter>Resource Files</Filter>
     </Image>
     <Image Include="Resource\dance_logo.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resource\story_coco_clean.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resource\story_dingding_clean.bmp">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
