--- a/DimigoGameLast/DimigoGameLast.vcxproj
+++ b/DimigoGameLast/DimigoGameLast.vcxproj
@@ -56,6 +56,7 @@
     <ClInclude Include="InfiniteScene.h" />
     <ClInclude Include="KeyInput.h" />
     <ClInclude Include="PullGameScene.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="SetScore.h" />
     <ClInclude Include="Speech.h" />
     <ClInclude Include="StoryScene.h" />
@@ -71,7 +72,6 @@
     <ClInclude Include="Disk.h" />
     <ClInclude Include="DiskGameScene.h" />
     <ClInclude Include="ReadyStartScene.h" />
-    <ClInclude Include="resource.h" />
     <ClInclude Include="ScoreDisplay.h" />
     <ClInclude Include="SpriteResources.h" />
     <ClInclude Include="WaveAudio.h" />
@@ -178,12 +178,21 @@
     <Image Include="Resource\start.bmp" />
     <Image Include="Resource\story_coco_clean.bmp" />
     <Image Include="Resource\story_coco_win.bmp" />
+    <Image Include="Resource\story_dance_coco_win.bmp" />
+    <Image Include="Resource\story_dance_dingding_win.bmp" />
     <Image Include="Resource\story_dingding_clean.bmp" />
     <Image Include="Resource\story_dingding_win.bmp" />
+    <Image Include="Resource\story_disk_coco_win.bmp" />
+    <Image Include="Resource\story_disk_dingding_win.bmp" />
     <Image Include="Resource\story_first.bmp" />
+    <Image Include="Resource\story_pull_coco_win.bmp" />
+    <Image Include="Resource\story_pull_dingding_win.bmp" />
     <Image Include="Resource\story_timetable.bmp" />
     <Image Include="Resource\string.bmp" />
     <Image Include="Resource\teacher_help.bmp" />
+    <Image Include="Resource\teacher_help_dance.bmp" />
+    <Image Include="Resource\teacher_help_disk.bmp" />
+    <Image Include="Resource\teacher_help_pull.bmp" />
     <Image Include="Resource\wrong.bmp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
@@ -249,6 +258,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <AdditionalDependencies>Winmm.lib;vfw32.lib;Msimg32.lib;shcore.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <TypeLibraryResourceID>65535</TypeLibraryResourceID>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -262,6 +272,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <AdditionalDependencies>Winmm.lib;vfw32.lib;Msimg32.lib;shcore.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <TypeLibraryResourceID>65535</TypeLibraryResourceID>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -279,6 +290,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>Winmm.lib;vfw32.lib;Msimg32.lib;shcore.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <TypeLibraryResourceID>65535</TypeLibraryResourceID>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -296,6 +308,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>Winmm.lib;vfw32.lib;Msimg32.lib;shcore.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <TypeLibraryResourceID>65535</TypeLibraryResourceID>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
